<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
            android:id="@+id/header1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/header1"
            android:textSize="24sp"
            android:textStyle="bold"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/header1"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/header2"
            android:textSize="24sp"
            android:textStyle="bold"/>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_centerInParent="true">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prototype_choose"
                android:layout_margin="16dp"/>

        <RadioGroup
                android:id="@+id/choice_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/choice_first">

            <RadioButton
                    android:id="@+id/choice_first"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/data_raw"/>

            <RadioButton
                    android:id="@+id/choice_second"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/data_converter"/>

            <RadioButton
                    android:id="@+id/choice_third"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/data_factory"/>
        </RadioGroup>

        <Button
                android:id="@+id/prototype_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/prototype_start"/>
    </LinearLayout>
</RelativeLayout>

